# kron_solvers

./: .gitignore  README.md  pyproject.toml  setup.py
src/kron_solvers/: __init__.py  core.py  solvers.c  solvers.pyx
tests/: apg.py  bcd.py  tbcd.py  thk0.py  xapg.py  xbcd.py
